<resources>
    <string name="app_name">GeoQuiz</string>

    <!-- MainActivity -->
    <string name="question_australia">캔버라는 호주의 수도이다.</string>
    <string name="question_ocean">태평양은 대서양보다 더 크다.</string>
    <string name="question_mideast">수에즈 운하에는 홍해와 인도양을 연결한다.</string>
    <string name="question_africa">나일강은 이집트에서 시작됐다.</string>
    <string name="question_americas">아마존 강은 아메리카 대륙에서 가장 긴 강이다.</string>
    <string name="question_asia">바이칼 호수는 세계에서 가장 오래되고 가장 깊은 호수이다.</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="answer">맞음!!!</string>
    <string name="wrong_answer">틀렸음!!!</string>
    <string name="next_button">NEXT</string>
    <string name="previous_button">PREVIOUS</string>
    <string name="submit_button">SUBMIT</string>
    <string name="cheat_button">컨닝하기</string>
    <string name="judgement_toast">커닝은 나쁜 짓이야~~~</string>
    <string name="sdk_version_info">API 레벨 %1$d</string>
    <string name="remain_cheating_count">남은 컨닝 횟수 :: %1$d</string>
    <string name="exist_non_solved_problem">풀지 않은 문제가 존재합니다.</string>

    <!-- CheatActivity -->
    <string name="warning_text">정말로 답을 보시겠습니까?</string>
    <string name="show_answer_button">정답보기</string>

    <!-- ResultActivity -->
    <string name="result">결과</string>
    <string name="correct_problems">맞은 문제 : %1$d / %2$d </string>
    <string name="score_percentage">정답률 : %1$d%</string>
    <string name="confirm_result">확인</string>

</resources>